--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "node node_modules/.bin/nodemon index.js",
     "start": "node index.js",
     "lint": "eslint"
   },
@@ -24,8 +24,5 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "joi": "^17.4.2"
-  },
-  "engines": {
-    "node": "14.x"
   }
 }
