--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
+    "dotenv": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
