--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "dotenv": "^10.0.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
