--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
-    "sequelize-cli": "^6.2.0",
     "@hapi/boom": "^9.1.4",
-    "dotenv": "^10.0.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "joi": "^17.4.2",
+    "mysql2": "^2.3.0",
     "pg": "^8.7.1",
-    "mysql2": "^2.3.0"
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0"
   }
 }
