--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "nodemailer": "^6.6.3",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
